# rtiroutingservice-adapters

./: .gitignore  README.md
adapters/file/: README.md  file_adapter_config.xml  makefile
adapters/file/src/: FileAdapter.c  LineConversion.c  LineConversion.h
transformation/: CMakeLists.txt  README.md  SensorDataExample.cxx  SensorDataExample.hpp  SensorDataExample.idl  SensorDataExampleImpl.cxx  SensorDataExampleImpl.h  SensorDataExampleImplPlugin.cxx  SensorDataExampleImplPlugin.h  SensorDataExamplePlugin.cxx  SensorDataExamplePlugin.hpp  SensorDataTransformation.cxx  SensorDataTransformation.h  SensorDataTransformationPlugin.cxx  SensorDataTransformationPlugin.h  TransformedSensorDataExample.cxx  TransformedSensorDataExample.hpp  TransformedSensorDataExample.idl  TransformedSensorDataExampleImpl.cxx  TransformedSensorDataExampleImpl.h  TransformedSensorDataExampleImplPlugin.cxx  TransformedSensorDataExampleImplPlugin.h  TransformedSensorDataExamplePlugin.cxx  TransformedSensorDataExamplePlugin.hpp  sensordatatransf.xml
